# Baernstormers

./: README.md
SpendCast_BE/: .dockerignore  .gitignore  API_README.md  DEPLOYMENT.md  Dockerfile  README.md  README_TESTS.md  dockerize.sh  env.production  main.py  pyproject.toml  requirements.txt  startup.sh
SpendCast_BE/src/: __init__.py  config.py  db.py  models.py
SpendCast_BE/src/crud/: database.py  helloworld.py  openfoodfacts.py
SpendCast_BE/src/routers/: accounts.py  customers.py  database.py  helloworld.py  langgraph_agent.py  openfoodfacts.py  spendcast_mcp_server.py  transactions.py
SpendCast_BE/tests/: conftest.py  test_runner.py
SpendCast_BE/tests/integration/: test_customers_integration.py
SpendCast_BE/tests/unit/: test_config.py  test_customers.py  test_helloworld.py  test_langgraph_agent.py  test_main.py  test_streaming.py
SpendCast_FE/: index.html  package-lock.json  package.json  tailwind.config.js
SpendCast_FE/src/: App.tsx  index.css
backend/: docker-compose.yml  financial_agent.py  pyproject.toml  spendcast_mcp_server.py
data-extraction/: requirements.txt
data-extraction/data/: graph.ttl  unique_brands.csv
data-extraction/gftin-update/: enrich_gtin_from_migipedia.py  enrich_gtin_from_migipedia_pref76_fixsubject.py  gtins.txt  gtins2.txt  nutrigrade_update.py
data-extraction/output/: alcohol_spend.json  coffee_spend.json  healthy_spend.json  media_subscriptions_spend.json  swiss_made_spend.json  transport_spend.json
data-extraction/queries/: coffee-items.sparql  food-data.sparql  media-subscriptions.sparql  (+2 more)
(+51 files in other folders)
