[project]
name = "bernhackt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "fastmcp>=2.11.3",
    "httpx>=0.28.1",
    "langchain-mcp-adapters>=0.1.9",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.6",
    "mcp[cli]>=1.13.1",
    "sparqlwrapper>=2.0.0",
    "streamlit>=1.48.1",
    "uvicorn>=0.35.0",
]
